@@ -35,20 +35,21 @@ public:
 	bs2b_base();
 	~bs2b_base();
 
-	void      set_level( uint32_t level );
-	uint32_t  get_level();
-	void      set_srate( uint32_t srate );
-	uint32_t  get_srate();
-	void      clear();
-	bool      is_clear();
+	void        set_level( uint32_t level );
+	uint32_t    get_level();
+	void        set_srate( uint32_t srate );
+	uint32_t    get_srate();
+	void        clear();
+	bool        is_clear();
+	char const *runtime_version( void );
 
-	void cross_feed( double   *sample );
-	void cross_feed( float    *sample );
-	void cross_feed( int32_t  *sample );
-	void cross_feed( int16_t  *sample );
-	void cross_feed( int8_t   *sample );
-	void cross_feed( uint8_t  *sample );
-	void cross_feed( int24_t  *sample );
+	void cross_feed( double   *sample, int n = 1 );
+	void cross_feed( float    *sample, int n = 1 );
+	void cross_feed( int32_t  *sample, int n = 1 );
+	void cross_feed( int16_t  *sample, int n = 1 );
+	void cross_feed( int8_t   *sample, int n = 1 );
+	void cross_feed( uint8_t  *sample, int n = 1 );
+	void cross_feed( int24_t  *sample, int n = 1 );
 }; // class bs2b_base
 
 #endif // BS2BCLASS_H
